--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -29,3 +29,21 @@
   background-color: #061d31;
   border-radius: 0px;
 }
+
+input{
+  color: white;
+  background-color: unset;
+  -moz-appearance: textfield;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  &:focus{
+    outline: unset;
+  }
+
+  font-size: 15px;
+}
