--- a/src/components/layouts/layout.scss
+++ b/src/components/layouts/layout.scss
@@ -6,3 +6,8 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+.connect-btn{
+    background-color: #5137ee !important;
+    border-radius: .375rem !important;
+}
