--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -2,14 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "SF Pro Display"; /*Can be any text*/
+  src: local("ProductSansInfanity"),
+    url("../../assets/fonts/ProductSansInfanity.ttf") format("truetype");
+}
+
 html,
 body {
   margin: unset;
   padding: unset;
   font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "SF Pro Display";
 
   overflow-x: hidden;
 }
